modificado footer para que quede anclado abajo de la página

--- a/unidad3/01/css/estilos.css
+++ b/unidad3/01/css/estilos.css
@@ -25,6 +25,13 @@ button {
     font-size: 16px;
 }
 
+footer{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0; /* anclar el footer abajo*/
+}
+
 footer p {
     color: #ffffff;
 }
