--- a/unidad3/02/css/estilos.css
+++ b/unidad3/02/css/estilos.css
@@ -73,6 +73,32 @@ table {
     text-align: center;
 }
 
+/* Estilo del footer */
+footer {
+    background-color: #333;
+    padding: 15px;
+    margin-top: 20px;
+}
+
+footer{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0; /* anclar el footer abajo*/
+}
+
+footer p {
+    color: #ffffff;
+    text-align: center;
+}
+
+/* Estilos del enlace */
+footer a {
+    color: #6b911f;
+    text-decoration: none;
+}
+
+
 /*diseño responsive*/
 
 @media (max-width: 768px) { /* Móviles */
