--- a/unidad3/03/css/estilos.css
+++ b/unidad3/03/css/estilos.css
@@ -2,7 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* importante para que medidas no se descuadren */
+    box-sizing: border-box; /* importante para que las medidas no se descuadren */
     text-align: center;
 }
 
@@ -14,14 +14,21 @@ body {
     align-items: center; /* centrar horizontalmente */
 }
 
-
 h1{
     font-size: 25px;
 }
 
 .tablero {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr); 
+    /*
+    repeat se emplea cuando todas van a ser iguales, en caso de que no queramos eso, los valores se separan por comas
+    el primer número indica cuantos elementos se quieren poner por fila y el segundo es el tamaño que va a tener
+    
+    Por ejemplo:
+    grid-template-columns: 150px 300px 600px
+    cada una tendría un tamaño de separación entre ellas(verticalmente)
+    */
     gap: 10px;
     margin: 20px 0; /* margen arriba y abajo */
 }
@@ -38,18 +45,35 @@ h1{
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* si está vacía */
+/* si está vacía 
 .casilla:hover:empty {
     background-color: rgb(182, 215, 132);
+    cursor:pointer; /* se cambia el estilo del cursor al estar encima de las casillas vacías 
 }
+*/
 
-/* Que las imágenes ocupen bien */
+/* estilo para que las imagenes queden en la casilla (con borde redondeado) */
 .casilla img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 20px;
 }
 
+/* Estilo del botón */
+button {
+    border: 2px solid #8ACCF5;
+    background-color: #2ca0e8;
+    height: 3em;
+    width: 18%; /* Ajustar el tamaño */
+    color: white;
+    font-weight: bold;
+    border-radius: 8px;
+    margin-top: 5px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /* Estilo del footer */
 footer {
